Badges for new comments in tasks and subtasks...

--- a/src/ZectranetBundle/Resources/views/task.html.twig
+++ b/src/ZectranetBundle/Resources/views/task.html.twig
@@ -513,7 +513,7 @@
                                         added a comment - [[ post.posted ]]
                                     </span>
                                 </p>
-                                <p style="margin: -10px 0 0 83px;" ng-bind-html="post.message"></p>
+                                <p style="margin: -10px 0 0 83px; white-space: pre-wrap;" ng-bind-html="post.message"></p>
                                 <hr>
                             </div>
                         </div>
