Badges for new comments in tasks and subtasks...

--- a/src/ZectranetBundle/Resources/views/login.html.twig
+++ b/src/ZectranetBundle/Resources/views/login.html.twig
@@ -52,7 +52,7 @@
 								</a>
 
 								<div class="form-footer">
-									<input type="hidden" name="_target_path" value="/user/home" />
+									<input type="hidden" name="_target_path" value="/" />
 									<button type="submit" class="btn btn-info pull-right btn-submit">Login</button>
 								</div>
 							</form>
