--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -44,7 +44,9 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="{{ path('zectranet_user_home') }}">Zectranet <i class="fa fa-bookmark"></i></a>
+					<a class="navbar-brand" href="{{ path('zectranet_show_office', { 'office_id': app.user.homeOffice.id }) }}">
+                        Zectranet <i class="fa fa-bookmark"></i>
+                    </a>
 				</div>
 			{% endif %}
 
