--- a/src/ZectranetBundle/Resources/views/officeSettings.html.twig
+++ b/src/ZectranetBundle/Resources/views/officeSettings.html.twig
@@ -84,7 +84,7 @@
                                                ng-class="{ 'active': user.selected }" ng-click="selectUser(user)">
                                                 <i class="fa fa-user"></i>
                                                 [[user.name + ' ' + user.surname + ' (' + user.username + ')' ]]
-                                                <label ng-if="user.request" class="pull-right label label-default">Request sended</label>
+                                                <label ng-if="user.request" class="pull-right label label-default">Request sent</label>
                                             </a>
                                         </div>
                                         <div class="form-group">
